--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,108 @@
-theme: "hugo-lithium"
-baseURL: http://example.org/
-languageCode: en-us
-title: My New Hugo Site
+title: "ffverse"
+baseURL: "https://ffverse.com"
+languageCode: "en-US"
+theme: "osprey-delight"
+tags: ["fantasy-football", "r-package", "analytics"]
+#canonifyURLS: true
+#googleAnalytics: ""
+disableKinds: ["taxonomy", "taxonomyTerm"]
+enableEmoji: true
+pygmentsUseClasses: true
+
+module:
+  imports:
+  - path: github.com/hugo-mods/icons
+
+## Generic theme parameters:
+Params:
+  author: "Tan Ho"
+  description: "ffverse • a collection of fantasy football R packages"
+
+  # logoBig appears at the top of the page. Use a path relative to the assets dir for auto-resizing. 
+  logoBig: "ffverse-header.png"
+
+  # logoSmall is the logo that will be shown in the left corner of the nav bar.
+  #   Use a path relative to the assets dir for auto-resizing.
+  logoSmall: "ffverse.png"
+
+  # tagline (followed by a cursor) is shown at the top, below the logo
+  #tagline: "Welcome!"
+
+  # mdTagline can be used instead to specify the tagline in Markdown for more customizability.
+  #   Note that {cursor} is a placeholder and will be replaced by the actual cursor HTML when rendering.
+  mdTagline: "## A collection of fantasy football R packages{cursor}"
+  favicon: "ffverse.png"
+
+  opengraphImage: "/images/ffverse-header.png"
+
+  # enforceSinglePage will enforce redirection to the baseURL for all sub-directories/-pages.
+  #   Example: If you create about.md, Hugo will also create a '/about/index.html'. This file will contain only a redirect directive if this switch is enabled.
+  enforceSinglePage: true
+
+  # copyright flag generates a copyright notice in footer for your site.
+  copyright: true
+  credit: false
+
+## Social links in footer:
+  Social:
+  - type: github
+    url: github = "https://github.com/ffverse"
+   
+  - type: discord
+    url: "https://discord.com/invite/5Er2FBnnQa"
+  
+  - type: twitter # the icon to use. can be anything mentioned in "assets/sass/_icons.scss" 
+    url: "https://twitter.com/dynastyprocess"
+
+## Theme features:
+  Feat:
+    # useLazySizes to lazy load images with lazysizes (recommended)
+    useLazySizes: false
+
+    # ajaxBasin uses Basin for a functional contact form.
+    # ajaxBasin: "https://usebasin.com/f/{YOUR-12-CHAR-FORM-KEY-HERE}"
+
+    # useStructuredData for your own https://schema.org/Person (SEO-friendly).
+    #   This will be auto-generated dependent on the information you provide in this configuration.
+    useStructuredData: true
+
+    # structuredDataGitHubUser needs your USERNAME so that the GitHub API is used to fetch more information for structured data.
+    #   This will use information that is publically available about your GitHub user profile at https://api.github.com/users/{USERNAME}.
+    structuredDataGitHubUser: "ffverse"
+
+    # useTermynal enables Termynal (https://github.com/ines/termynal), a small JS library for showing a terminal "animation" from within your gallery item.
+    #   The cool thing is that the library has been stripped-down to a minimum to only have the necessary functionality.
+    useTermynal: false 
+
+    # googleTagManager: ""
+  
+  # Expert mode: Configure image resizing (some of the settings are not yet publicly documented)
+  Image:
+    Logo:
+      resize: "900x"
+    Gallery:
+      resize: "700x"
+    # Background:
+    #   resize: "1920x"
+      
+
+## The menu items are automatically added to navbar. Use content files for more advanced usage.
+##   See: https://gohugo.io/content-management/menus/#add-content-to-menus
+Menu:
+  Main:
+    - name: "About"
+      identifier: about
+      url: "/#about"
+      weight: 1
+    - name: "Packages"
+      identifier: gallery
+      url: "/#packages"
+      weight: 2
+    - name: "Install"
+      identifier: install
+      url: "/#install"
+      weight: 3
+    - name: "DP.com"
+      url: "https://dynastyprocess.com"
+      weight: 4
+    # Use icon here to back reference an external site:
